--- a/style.css
+++ b/style.css
@@ -12,18 +12,11 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
-}
-
-#container{
-    background-color: rgba(0,0,0,0.3);
-    margin: auto;
-    max-width: 1240px;
-    margin-top: 30px;
-    padding: 1rem;
+    max-height: 100%;
 }
 
 span{
-    color: red;
+    color: #009FD6;
 }
 
 header{
